fixed the alignment, font size,weight, gaping of login page

--- a/src/style.css
+++ b/src/style.css
@@ -26,7 +26,7 @@ body {
   margin: 0;
   min-width: 320px;
   min-height: 100vh;
-  color: black;
+  background-color: #f3f4f6;
 }
 
 h1 {
@@ -37,7 +37,6 @@ h1 {
 button {
   border-radius: 8px;
   border: 1px solid transparent;
-  padding: 0.6em 1.2em;
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
@@ -52,7 +51,7 @@ button {
 #app {
   /* max-width: 1280px; */
   /* margin: 0 auto; */
-  padding: 1rem;
+  /* padding: 1rem; */
   background-color: #f3f4f6;
 }
 
